[tool.poetry]
name = "text-to-image-generator"
version = "0.1.0"
description = ""
authors = ["SP85691 <suryapratap8562@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
gradio-client = "^0.15.0"
opencv-python = "^4.9.0.80"
gradio = "^4.25.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
